fixing nav bug with z-index

--- a/src/components/nav/navigation.css
+++ b/src/components/nav/navigation.css
@@ -1,3 +1,6 @@
+nav > *{
+    z-index: 1000 ;
+}
 .navTextContainer{
     position: fixed;
     
